:wrench: Add configuration maanegement library and use it to enable/disable mocked pin factory and demos

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ gpiozero = "^1.5.1"
 pygame = "^1.9.6"
 requests = "^2.23.0"
 twython = "^3.7.0"
+dynaconf = "^2.2.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^4.6"
