:wrench: Enable mocked server/demos only on development env

--- a/config/settings.toml
+++ b/config/settings.toml
@@ -3,7 +3,7 @@ demo_button_press = false
 demo_play_octave = false
 mocked_gpio = false
 
-[staging]
+[development]
 demo_button_press = true
 demo_play_octave = true
 mocked_gpio = true
